# epaper

./: CLAUDE.md  PriceExtractor.py  PriceTicker.py  README.md  config.toml  epaper.service  pyproject.toml  requirements.txt  sonar-project.properties  test_price_extractor.py
.github/workflows/: sonarcloud.yml
bitcoinaudit/: requirements.txt
deploy/systemd/: README.md  btcticker.service
docs/: index.html  raspberry-pi-waveshare-epaper-bitcoin-ticker.html  robots.txt  sitemap.xml
led/: README.md  config.conf  led.py  ledstrip.py  requirements.txt
ledlightstrip/: http_server.py  requirements-test.txt  requirements.txt  run.py
ledlightstrip/config/: config.conf  config_manager.py
ledlightstrip/led/: color.py  effects.py  gpio_service.py  ledlightstrip_controller.py  profile_manager.py
ledlightstrip/service/: README.md  led.service
src/btcticker/: __main__.py  display.py  price_ticker.py
src/btcticker/utils/: graceful_shutdown.py
src/epaper/: __main__.py  config.py  display.py  http_client.py  price_ticker.py  ticker.py
src/epaper/price/: bitcoin_price_client.py  client.py  extractor.py  mock.py  price_extractor.py
src/epaper/utils/: graceful_shutdown.py  watchdog.py
systemd/: epaper.service
tests/: test_bitcoin_price_client.py  test_display.py  test_graceful_shutdown.py  test_http_client.py  test_main.py  test_price_client.py  test_price_extractor.py  test_price_ticker.py  test_ticker.py  test_watchdog.py
utils/: graceful_shutdown.py
