[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epaper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
rpi = [
    "RPi.GPIO==0.7.1",
    "spidev==3.4",
    "pigpio==1.44",
    "gpiozero>=1.6.2",
    "numpy>=2.0.0",
    "waveshare-epd @ git+https://github.com/waveshareteam/e-Paper.git#subdirectory=RaspberryPi_JetsonNano/python",
]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
epaper = "epaper.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/epaper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
