[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epaper"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
rpi = [
    "RPi.GPIO>=0.7.1",
    "spidev>=3.8",
    "pigpio>=1.78",
    "gpiozero>=1.6.2",
    "numpy>=2.0.0",
    "waveshare-epd @ git+https://github.com/waveshareteam/e-Paper.git@86aa9932f471a50157cf02fafadc2c1b4a965449#subdirectory=RaspberryPi_JetsonNano/python",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=4.0.0",
    "ruff>=0.11.2",
]

[project.scripts]
epaper = "epaper.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/epaper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/epaper --cov-report=xml"

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = ["src/epaper/lib"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line-length enforced by formatter, not linter
]
